DHFPROD-7066: fixed misaligned help icons in new/edit curate step dialog

--- a/marklogic-data-hub-central/ui/src/components/entities/create-edit-step/create-edit-step.module.scss
+++ b/marklogic-data-hub-central/ui/src/components/entities/create-edit-step/create-edit-step.module.scss
@@ -31,25 +31,30 @@
     cursor: not-allowed;
 }
 
+.questionCircle:before,
+.questionCircleCollection:before,
+.questionCircleQuery:before {
+    position: absolute;
+}
+
 .questionCircle {
     font-size: 12px;
     color: #7F86B5;
+    margin: 15px 0px 0px;
 }
 
 .questionCircleCollection {
     font-size: 12px;
     color: #7F86B5;
-    margin-left: 92px;
+    margin-left: -8px;
     margin-top: 14px;
-    position: absolute;
 }
 
 .questionCircleQuery {
+    margin-left: -112px;
+    margin-top: 14px;
     font-size: 12px;
     color: #7F86B5;
-    margin-left: -10px;
-    margin-top: 14px;
-    position: absolute;
 }
 
 .searchIcon {
